Updated the r-emlassemblyline feedstock.

--- a/.gitmodules
+++ b/.gitmodules
@@ -71886,3 +71886,7 @@
 	url = https://github.com/conda-forge/dicfg-feedstock.git
 	path = feedstocks/dicfg
 	branch = refs/heads/main
+[submodule "r-emlassemblyline"]
+	url = https://github.com/conda-forge/r-emlassemblyline-feedstock.git
+	path = feedstocks/r-emlassemblyline
+	branch = refs/heads/main
